configured sbt to allow spark "provided" dependency in root project for assembly fat jar while allowing to run with spark "compile" dependency locally

--- a/src/main/resources/mavenpop.conf
+++ b/src/main/resources/mavenpop.conf
@@ -1,11 +1,19 @@
 mavenpop{
 
   path{
-    repologs = "in/repolog-part0000.txt"
     dependencies = "in/distinct_paths_inferred_gavs_with_deps.txt"
-    gavlogs = "out/gavlog-part0000.parquet"
-    sessions = "out/sessions.parquet"
-    sessionsWithDeps = "out/sessions-with-dep.parquet"
+
+    # repologs = "/home/edhdz/l/mavenpop/data_sample/repologs/*"
+    # repologs = "/home/edhdz/l/mavenpop/data/repologs/*"
+
+//    gavlogs = "out/gavlogs-all.parquet"
+//    sessions = "out/sessions-all.parquet"
+//    sessionsWithDeps = "out/sessions-with-dep-all.parquet"
+
+    repologs = "in/repolog-part0000.txt"
+    gavlogs = "out/gavlogs-one.parquet"
+    sessions = "out/sessions-one.parquet"
+    sessionsWithDeps = "out/sessions-with-dep-one.parquet"
   }
 
   sessions{
