profiling dependencies analytics

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -14,6 +14,7 @@ mavenpop{
     gavlogs = "out/gavlogs-one.parquet"
     sessions = "out/sessions-one.parquet"
     sessionsWithDeps = "out/sessions-with-dep-one.parquet"
+    sessionsWithTime = "out/sessions-with-time-one.parquet"
   }
 
   sessions{
