added dependency profiler

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -8,5 +8,12 @@ mavenpop{
     gavlogs = "out/gavlogs-all.parquet"
     sessions = "out/sessions-all.parquet"
     sessionsWithDeps = "out/sessions-with-dep-all.parquet"
+    sessionsWithTime = "out/sessions-with-time-sample.parquet"
+  }
+
+  dependencyComputerProfiler{
+    minSessionSize = 2
+    maxSessionSize = 40
+    samplesPerSize = 10
   }
 }
