--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -11,14 +11,20 @@ mavenpop{
 //    sessionsWithDeps = "out/sessions-with-dep-all.parquet"
 
     repologs = "in/repolog-part0000.txt"
-    gavlogs = "out/gavlogs-one.parquet"
-    sessions = "out/sessions-one.parquet"
-    sessionsWithDeps = "out/sessions-with-dep-one.parquet"
-    sessionsWithTime = "out/sessions-with-time-one.parquet"
+    gavlogs = "out/gavlogs.parquet"
+    sessions = "out/sessions.parquet"
+    sessionsWithDeps = "out/sessions-with-dep.parquet"
+    sessionsWithTime = "out/sessions-with-time.parquet"
   }
 
   sessions{
     maxIdleMillis = 60000 # one minute in milliseconds
+  }
+
+  dependencyComputerProfiler{
+    minSessionSize = 5
+    maxSessionSize = 10
+    samplesPerSize = 5
   }
 
   neo4j{
