implemented different profiling options

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -12,6 +12,7 @@ mavenpop{
   }
 
   dependencyComputerProfiler{
+    version = 3
     minSessionSize = 2
     maxSessionSize = 40
     samplesPerSize = 20
