--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -15,6 +15,7 @@ mavenpop{
     sessions = "out/sessions.parquet"
     sessionsWithDeps = "out/sessions-with-dep.parquet"
     sessionsWithTime = "out/sessions-with-time.parquet"
+    sampleSessionsPrefix = "out/sample-profiler-sessions"
   }
 
   sessions{
@@ -22,9 +23,10 @@ mavenpop{
   }
 
   dependencyComputerProfiler{
-    minSessionSize = 5
-    maxSessionSize = 10
-    samplesPerSize = 5
+    version = 3
+    minSessionSize = 16
+    maxSessionSize = 16
+    samplesPerSize = 30
   }
 
   neo4j{
