--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -26,13 +26,13 @@ mavenpop{
   dependencyComputerProfiler{
     minSessionSize = 16
     maxSessionSize = 16
-    samplesPerSize = 30
+    samplesPerSize = 5
     depth{
-      start = 1
-      end = 1
+      start = 0
+      end = 2
       step = 1
     }
-    cacheSamples = false
+    cacheSamples = true
     useCacheSamples = true
   }
 
