enabled parser to load transitive dependencies as direct dependencies

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -14,15 +14,24 @@ mavenpop{
   }
 
   dependencyComputerProfiler{
-    minSessionSize = 2
-    maxSessionSize = 40
-    samplesPerSize = 20
+    sessionSize{
+      start = 2
+      end = 40
+      step = 4
+    }
+    samplesPerSize = 5
     depth{
       start = 5
-      end = 20
+      end = 10
       step = 5
     }
-    cacheSamples = false
-    useCacheSamples = false
+    cacheSamples = true
+    useCacheSamples = true
+  }
+
+  neo4j{
+    boltUrl = "bolt://localhost:17687"
+    username = "neo4j"
+    password = "Neo03"
   }
 }
