--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -24,8 +24,11 @@ mavenpop{
   }
 
   dependencyComputerProfiler{
-    minSessionSize = 16
-    maxSessionSize = 16
+    sessionSize{
+      start = 16
+      end = 18
+      step = 1
+    }
     samplesPerSize = 5
     depth{
       start = 0
