improved data parser to exclude nodes with no relationships and added debug logging to profiler

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -13,18 +13,25 @@ mavenpop{
     sessionsBenchmarksPrefix = "out/sessions-benchmarks"
   }
 
+  parser {
+    writeTransitive = true
+  }
+
   dependencyComputerProfiler{
     sessionSize{
       start = 2
-      end = 40
-      step = 4
+      end = 5
+      step = 1
     }
-    samplesPerSize = 5
+
+    samplesPerSize = 10
+
     depth{
       start = 5
-      end = 10
-      step = 5
+      end = 5
+      step = 1
     }
+
     cacheSamples = true
     useCacheSamples = true
   }
