--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,7 +12,7 @@ mavenpop{
 
     repologs = "in/repolog-part0000.txt"
     gavlogs = "out/gavlogs.parquet"
-    sessions = "out/sessions.parquet"
+    sessions = "out/ses.parquet"
     sessionCount = "out/session-count.parquet"
     sessionsWithDeps = "out/sessions-with-dep.parquet"
     sampleSessionsPrefix = "out/profiler-sample-sessions"
@@ -23,24 +23,31 @@ mavenpop{
     maxIdleMillis = 60000 # one minute in milliseconds
   }
 
+  parser {
+    writeTransitive = true
+  }
+
   dependencyComputerProfiler{
     sessionSize{
-      start = 16
-      end = 18
+      start = 2
+      end = 5
       step = 1
     }
-    samplesPerSize = 5
+
+    samplesPerSize = 10
+
     depth{
-      start = 0
-      end = 2
+      start = 5
+      end = 5
       step = 1
     }
+
     cacheSamples = true
     useCacheSamples = true
   }
 
   neo4j{
-    boltUrl = "bolt://localhost:7687"
+    boltUrl = "bolt://server:7687"
     username = "neo4j"
     password = "Neo03"
   }
