improved transitive dependencies queries

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -12,7 +12,7 @@ mavenpop{
 
     repologs = "in/repolog-part0000.txt"
     gavlogs = "out/gavlogs.parquet"
-    sessions = "out/ses.parquet"
+    sessions = "out/profiler-sample-sessions-2-40-1-10.parquet"
     sessionCount = "out/session-count.parquet"
     sessionsWithDeps = "out/sessions-with-dep.parquet"
     sampleSessionsPrefix = "out/profiler-sample-sessions"
@@ -30,7 +30,7 @@ mavenpop{
   dependencyComputerProfiler{
     sessionSize{
       start = 2
-      end = 5
+      end = 40
       step = 1
     }
 
@@ -47,7 +47,7 @@ mavenpop{
   }
 
   neo4j{
-    boltUrl = "bolt://server:7687"
+    boltUrl = "bolt://server:17687"
     username = "neo4j"
     password = "Neo03"
   }
