--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -25,6 +25,21 @@ mavenpop{
 
   parser {
     writeTransitive = true
+    label {
+      gav = "GAV"
+      transitiveDependency = "T_DEPENDS_ON"
+      directDependency = "D_DEPENDS_ON"
+    }
+  }
+
+  dependencyComputer{
+    depth = 1
+  }
+
+  neo4j{
+    boltUrl = "bolt://server:17687"
+    username = "neo4j"
+    password = "Neo03"
   }
 
   dependencyComputerProfiler{
@@ -44,11 +59,5 @@ mavenpop{
 
     cacheSamples = true
     useCacheSamples = true
-  }
-
-  neo4j{
-    boltUrl = "bolt://server:17687"
-    username = "neo4j"
-    password = "Neo03"
   }
 }
