implemented common trait to provide spark context, logging and configuration to all jobs

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,5 +1,10 @@
 mavenpop{
 
+  spark{
+    masterUrl = "local[*]"
+    enableEventLog = "true"
+  }
+
   path{
     dependencies = "in/distinct_paths_inferred_gavs_with_deps.txt"
 
