--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -2,7 +2,7 @@
 log4j.rootLogger=INFO, console
 
 # Set mavenpop to file
-log4j.logger.com.redhat.mavenpop=DEBUG, mavenpopFile
+log4j.logger.com.redhat.mavenpop=INFO, mavenpopFile
 
 # Set spark to file
 log4j.logger.org.apache.spark=INFO, sparkFile
