--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -22,6 +22,7 @@ mavenpop{
     sessionsWithDeps = "out/sessions-with-dep.parquet"
     sampleSessionsPrefix = "out/profiler-sample-sessions"
     sessionsBenchmarksPrefix = "out/sessions-benchmarks"
+    reportDir = "out/reports/"
   }
 
   sessions{
