implemented filtering by date

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -7,38 +7,43 @@ mavenpop{
     repologs = "/home/edhdz/l/data/repologs/*"
     gavlogs = "out/gavlogs-all.parquet"
     sessions = "out/sessions-all.parquet"
-    sessionsWithDeps = "out/sessions-with-dep-all.parquet"
-    sessionsWithTime = "out/sessions-with-time-sample-v2.parquet"
+    sessionCount = "out/session-count.parquet"
+    enhancedSessions = "out/sessions-enhanced.parquet"
     sampleSessionsPrefix = "out/profiler-sample-sessions"
     sessionsBenchmarksPrefix = "out/sessions-benchmarks"
+    reportDir = "out/reports/"
   }
 
   parser {
     writeTransitive = true
   }
 
-  dependencyComputerProfiler{
-    sessionSize{
-      start = 2
-      end = 40
-      step = 1
+  dependencyComputer{
+    depth = 1
+
+    neo4j{
+      boltUrl = "bolt://server:17687"
+      username = "neo4j"
+      password = "Neo03"
     }
 
-    samplesPerSize = 10
+    profiler{
+      samplesPerSize = 10
 
-    depth{
-      start = 1
-      end = 1
-      step = 1
+      sessionSize{
+        start = 2
+        end = 40
+        step = 1
+      }
+
+      depth{
+        start = 1
+        end = 1
+        step = 1
+      }
+
+      cacheSamples = true
+      useCacheSamples = true
     }
-
-    cacheSamples = true
-    useCacheSamples = true
-  }
-
-  neo4j{
-    boltUrl = "bolt://localhost:17687"
-    username = "neo4j"
-    password = "Neo03"
   }
 }
