--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,30 +7,28 @@ mavenpop{
 
   path{
     dependencies = "in/distinct_paths_inferred_gavs_with_deps.txt"
-
-    # repologs = "/home/edhdz/l/mavenpop/data_sample/repologs/*"
-    # repologs = "/home/edhdz/l/mavenpop/data/repologs/*"
-
-//    gavlogs = "out/gavlogs-all.parquet"
-//    sessions = "out/sessions-all.parquet"
-//    sessionsWithDeps = "out/sessions-with-dep-all.parquet"
-
     repologs = "in/repolog-part0000.txt"
     gavlogs = "out/gavlogs.parquet"
     sessions = "out/profiler-sample-sessions-2-40-1-10.parquet"
     sessionCount = "out/session-count.parquet"
-    sessionsWithDeps = "out/sessions-with-dep.parquet"
+    enhancedSessions = "out/sessions-enhanced.parquet"
     sampleSessionsPrefix = "out/profiler-sample-sessions"
     sessionsBenchmarksPrefix = "out/sessions-benchmarks"
     reportDir = "out/reports/"
   }
 
-  sessions{
+  date{
+    start = "2014-06-18T00:00Z"
+    end = "2014-06-18T01:00Z"
+  }
+
+  sessioniser{
     maxIdleMillis = 60000 # one minute in milliseconds
   }
 
   parser {
     writeTransitive = true
+
     label {
       gav = "GAV"
       transitiveDependency = "T_DEPENDS_ON"
@@ -40,30 +38,30 @@ mavenpop{
 
   dependencyComputer{
     depth = 1
-  }
 
-  neo4j{
-    boltUrl = "bolt://server:17687"
-    username = "neo4j"
-    password = "Neo03"
-  }
-
-  dependencyComputerProfiler{
-    sessionSize{
-      start = 2
-      end = 40
-      step = 1
+    neo4j{
+      boltUrl = "bolt://server:17687"
+      username = "neo4j"
+      password = "Neo03"
     }
 
-    samplesPerSize = 10
+    profiler{
+      sessionSize{
+        start = 2
+        end = 40
+        step = 1
+      }
 
-    depth{
-      start = 1
-      end = 1
-      step = 1
+      samplesPerSize = 10
+
+      depth{
+        start = 1
+        end = 1
+        step = 1
+      }
+
+      cacheSamples = true
+      useCacheSamples = true
     }
-
-    cacheSamples = true
-    useCacheSamples = true
   }
 }
