--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -7,9 +7,9 @@ mavenpop{
 
   path{
     dependencies = "in/distinct_paths_inferred_gavs_with_deps.txt"
-    repologs = "in/repolog-part0000.txt"
-    gavlogs = "out/gavlogs.parquet"
-    sessions = "out/profiler-sample-sessions-2-40-1-10.parquet"
+    repologs = "in/repologs/*"
+    gavlogs = "out/gavlogs-all.parquet"
+    sessions = "out/sessions-all.parquet"
     sessionCount = "out/session-count.parquet"
     enhancedSessions = "out/sessions-enhanced.parquet"
     sampleSessionsPrefix = "out/profiler-sample-sessions"
@@ -40,7 +40,7 @@ mavenpop{
     depth = 1
 
     neo4j{
-      boltUrl = "bolt://server:17687"
+      boltUrl = "bolt://localhost:7687"
       username = "neo4j"
       password = "Neo03"
     }
