--- a/conf/demo.conf
+++ b/conf/demo.conf
@@ -2,9 +2,14 @@ include "application" # include default application config
 
 mavenpop{
 
+  date{
+    start = "2009-12-11T00:00Z"
+    end = "2010-02-10T00:00Z"
+  }
+
   path{
-    dependencies = "/home/edhdz/l/data/distinct_paths_inferred_gavs_with_deps.txt"
-    repologs = "/home/edhdz/l/data/repologs/*"
+    dependencies = "in/distinct_paths_inferred_gavs_with_deps.txt"
+    repologs = "in/repologs/*"
     gavlogs = "out/gavlogs-demo.parquet"
     sessions = "out/sessions-demo.parquet"
     enhancedSessions = "out/sessions-enhanced-demo.parquet"
