Changed date reporting pattern and enabled Reporter to handle timed out sessions

--- a/conf/server.conf
+++ b/conf/server.conf
@@ -2,6 +2,11 @@ include "application" # include default application config
 
 mavenpop{
 
+  date{
+    start = "2009-12-11T00-00Z"
+    end = "2010-02-10T00-00Z"
+  }
+
   path{
     dependencies = "/home/edhdz/l/data/distinct_paths_inferred_gavs_with_deps.txt"
     repologs = "/home/edhdz/l/data/repologs/*"
