--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -18,8 +18,8 @@ mavenpop{
   }
 
   date{
-    start = "2014-06-18T00:00Z"
-    end = "2014-06-18T01:00Z"
+    start = "2014-06-18T00-00Z"
+    end = "2014-06-18T01-00Z"
   }
 
   sessioniser{
